--- a/assessments.html
+++ b/assessments.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Assessments</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="main.js"></script>
@@ -12,7 +12,7 @@
 <body>
     <table style="position: relative; width: 100%; text-align: center;">
         <th style="position: relative; width: 25%;">
-            <h1 >UNIVERSITY Online learing platform</h1>
+            <h1 id="title">UNIVERSITY Online learing platform</h1>
         </th>
         <th style="position: relative;">
             <table style="position: relative; width: 100%; height: 25%; top: 50%">
@@ -30,32 +30,28 @@
             </table>
         </th>
     </table>
-    <div style="position: relative; width: 100%;">
-        <h2 style="text-align: center;">Modules</h2>
-        <table style="position: relative; width: 100%; height: 100%;">
+    <div>
+        <table style="position: relative; width: 75%; left: 12.5%; outline: 3px solid black">
             <tr>
-                <th id="IP" class="module">
-                    <p>Integrated Group project</p>
-                    <img class="image" src="image.jpg">
-                </th>
-                <th id="HCI" class="module">
-                    <p>Human Computer Interaction</p>
-                    <img class="image" src="image.jpg">
-                </th>
-                <th id="CPL" class="module">
-                    <p>Comparative Programming languages</p>
-                    <img class="image" src="image.jpg">
-                </th>
+                <th>Assessment Name</th>
+                <th>Module</th>
+                <th>Due Date</th>
+            </tr>
+            <tr>
+                <th>HCI CW1</th>
+                <th>Human Computer Interaction</th>
+                <th>12/12/2020</th>
+            </tr>
+            <tr>
+                <th>Group Project - Deliverable 1</th>
+                <th>Integrated Group Project</th>
+                <th>5/12/2020</th>
             </tr>
         </table>
     </div>
-
     <script>
-        $('#assessments').click(()=>{
-            window.location = "assessments.html";
-        });
-        $('.module').click(() => {
-            window.location = "module.html"
+        $('#title').click(() => {
+            window.location = "home.html"
         });
     </script>
 </body>
