--- a/main.html
+++ b/main.html
@@ -21,5 +21,10 @@
             </th>
         </tr>
     </table>
+    <script>
+        $("#loginButton").click(() => {
+            window.location = "home.html"
+        });
+    </script>
 </body>
 </html>
