added time table

--- a/assessments.html
+++ b/assessments.html
@@ -31,6 +31,9 @@
         </th>
     </table>
     <div>
+        <button id="back" class="btn">Back</button>
+    </div>
+    <div>
         <table style="position: relative; width: 75%; left: 12.5%; outline: 3px solid black">
             <tr>
                 <th>Assessment Name</th>
@@ -52,6 +55,9 @@
     <script>
         $('#title').click(() => {
             window.location = "home.html"
+        });
+        $('#back').click(()=>{
+            window.location = "home.html";
         });
     </script>
 </body>
