--- a/timetable.html
+++ b/timetable.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <title>Timetable</title>
 </head>
 <body>
     <table style="position: relative; width: 100%; text-align: center;">
@@ -30,35 +29,18 @@
             </table>
         </th>
     </table>
-    <div style="position: relative; width: 100%;">
-        <h2 style="text-align: center;">Modules</h2>
-        <table style="position: relative; width: 100%; height: 100%;">
-            <tr>
-                <th id="IP" class="module">
-                    <p>Integrated Group project</p>
-                    <img class="image" src="image.jpg">
-                </th>
-                <th id="HCI" class="module">
-                    <p>Human Computer Interaction</p>
-                    <img class="image" src="image.jpg">
-                </th>
-                <th id="CPL" class="module">
-                    <p>Comparative Programming languages</p>
-                    <img class="image" src="image.jpg">
-                </th>
-            </tr>
-        </table>
+    <div>
+        <button id="back" class="btn">Back</button>
     </div>
-
+    <div style="position: relative; top:50px; height:auto">
+        <img src="timetable.png" width="100%" height="auto">
+    </div>
     <script>
-        $('#assessments').click(()=>{
-            window.location = "assessments.html";
-        });
-        $('.module').click(() => {
-            window.location = "module.html"
-        });
         $('#timetable').click(() =>{
             window.location = "timetable.html";
+        });
+        $('#back').click(()=>{
+            window.location = "home.html";
         });
     </script>
 </body>
